--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,10 @@
             <artifactId>spring-boot-starter-quartz</artifactId>
             <version>2.5.5</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
