--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,9 +2,9 @@ spring:
   datasource:
     url: jdbc:mysql://192.168.0.100:3306/cxr_test?characterEncoding=UTF-8
     username: dbuser
-    password: Dbuser123!
+    password: DBuser123!
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis:
-  mapper-locations: classpath:mapping/*Mapper.xml
+  mapper-locations: classpath:mapping/*.xml
   type-aliases-package: com.sungcor.exam.entity
