--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,7 +4,19 @@ spring:
     username: dbuser
     password: DBuser123!
     driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: 192.168.0.100
+    port: 6379
+    password:
+    timeout: 30000
+    lettuce:
+      pool:
+        max-active: 8
+        max-wait: -1ms
+        max-idle: 8
+        min-idle: 0
 
 mybatis:
   mapper-locations: classpath:mapping/*.xml
   type-aliases-package: com.sungcor.exam.entity
+
