--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -34,13 +34,13 @@ xxl:
   job:
     accessToken:
     admin:
-      addresses: http://127.0.0.1:8888/xxl-job-admin
+      addresses: http://127.0.0.1:8880/xxl-job-admin
     executor:
-      appname: exam
+      appname: sh03-udp
       ip: localhost
       logpath: /data/applogs/xxl-job/jobhandler
       logretentiondays: 30
-      port: 9999
+      port: 9997
 
 
 
